--- a/package.json
+++ b/package.json
@@ -10,14 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.1.0",
+    "@mui/material": "^7.1.0",
     "@react-oauth/google": "^0.12.1",
     "@tailwindcss/vite": "^4.1.5",
     "axios": "^1.9.0",
-    "framer-motion": "^12.9.4",
+    "framer-motion": "^12.15.0",
     "lucide-react": "^0.510.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.2",
+    "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.5.3"
   },
   "devDependencies": {
