--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@react-oauth/google": "^0.12.2",
     "@tailwindcss/vite": "^4.1.5",
     "axios": "^1.9.0",
+    "dayjs": "^1.11.13",
     "framer-motion": "^12.15.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.510.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.2",
+    "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.6.2"
   },
