--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@mui/material": "^7.1.0",
     "@react-oauth/google": "^0.12.2",
     "@tailwindcss/vite": "^4.1.5",
-    "dayjs": "^1.11.13",
     "axios": "^1.10.0",
+    "cors": "^2.8.5",
+    "dayjs": "^1.11.13",
+    "dotenv": "^16.5.0",
     "emailjs-com": "^3.2.0",
+    "express": "^5.1.0",
     "framer-motion": "^12.15.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.510.0",
