--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tailwindcss/vite": "^4.1.5",
     "axios": "^1.10.0",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "dotenv": "^16.5.0",
     "emailjs-com": "^3.2.0",
@@ -27,11 +28,13 @@
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.510.0",
     "react": "^19.0.0",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.2",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
-    "react-router-dom": "^7.6.2"
+    "react-router-dom": "^7.6.2",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
