--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "jwt-decode": "^4.0.0",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.510.0",
+    "nodemailer": "^7.0.5",
+    "pdfkit": "^0.17.1",
     "react": "^19.0.0",
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.0.0",
