--- a/package.json
+++ b/package.json
@@ -19,19 +19,27 @@
     "@tailwindcss/vite": "^4.1.5",
     "axios": "^1.10.0",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "dotenv": "^16.5.0",
     "emailjs-com": "^3.2.0",
     "express": "^5.1.0",
     "framer-motion": "^12.15.0",
     "jwt-decode": "^4.0.0",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.510.0",
+    "nodemailer": "^7.0.5",
+    "openai": "^5.10.2",
+    "pdfkit": "^0.17.1",
     "react": "^19.0.0",
+    "react-chatbot-kit": "^2.2.2",
+    "react-datepicker": "^8.4.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.2",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
-    "react-router-dom": "^7.6.2"
+    "react-router-dom": "^7.6.2",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
