--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 VITE_GOOGLE_CLIENT_ID=523932479906-kqgs5nn522l6sknlum0m2e4rut5gcems.apps.googleusercontent.com
+
+# VITE_GOOGLE_CLIENT_ID=523932479906-kqgs5nn522l6sknlum0m2e4rut5gcems.apps.googleusercontent.com
+
+VITE_GOOGLE_CORAL_API_KEY=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
