--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
     "@react-oauth/google": "^0.12.2",
+    "@stripe/react-stripe-js": "^3.9.1",
+    "@stripe/stripe-js": "^7.8.0",
     "@tailwindcss/vite": "^4.1.5",
     "axios": "^1.11.0",
     "cors": "^2.8.5",
